--- a/src/panel/index.css
+++ b/src/panel/index.css
@@ -1,6 +1,16 @@
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+:global #root {
+  height: 100%;
 }
