feat(Timeline): add a sentinel element

--- a/src/application/components/Timeline/index.css
+++ b/src/application/components/Timeline/index.css
@@ -33,6 +33,16 @@
   outline: none;
 }
 
+.EventListItemSentinel {
+  justify-content: center;
+  border-bottom: none;
+}
+
+.EventListItemSentinel:hover {
+  background: none;
+  cursor: default;
+}
+
 .EventListItemButton {
 
 }
