--- a/src/example/src/App.css
+++ b/src/example/src/App.css
@@ -16,12 +16,15 @@ h1 {
 
 main {
   width: 100%;
-  max-width: 800px;
-  padding: 0 50px;
+  max-width: 760px;
   margin: 50px auto 0;
 }
 
 :global {
+  .container {
+    display: flex
+  }
+
   .ais-SearchBox__root {
     max-width: 100%;
     margin-bottom: 30px;
